samples/_failures_safe/1761458790_d99036_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2efee426.c: In function ‘main’:
./samples/SAFE/__tmp_2efee426.c:175: error: expected ‘{’ at end of input
